<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.ProfileCenterFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">

        <TextView
            android:text="Datos del Centro Educativo"
            android:layout_gravity="center"
            android:textSize="25sp"
            android:textColor="#000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!--FOTO DE PERFIL-->
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imagenMisDatos"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:src="@drawable/servicios_centroseducativos"/>

        <!--NOMBRE COMPLETO-->
        <TextView
            android:id="@+id/nombreDato"
            android:text="@string/NombreDato"
            android:textSize="18sp"
            android:textColor="#000"
            android:layout_marginTop="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!--SITIO WEB-->
        <TextView
            android:id="@+id/sitiowebDato"
            android:text="@string/sitioWeb"
            android:textSize="18sp"
            android:textColor="#000"
            android:layout_marginTop="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!--CORREO-->
        <TextView
            android:id="@+id/correoDato"
            android:text="@string/CorreoDato"
            android:textSize="18sp"
            android:textColor="#000"
            android:layout_marginTop="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!--TELEFONO-->
        <TextView
            android:id="@+id/telefonoDato"
            android:text="@string/TelefonoDato"
            android:textSize="18sp"
            android:textColor="#000"
            android:layout_marginTop="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!--DIRECCION-->
        <TextView
            android:id="@+id/direccionDato"
            android:text="@string/DirecciónDato"
            android:textSize="18sp"
            android:textColor="#000"
            android:layout_marginTop="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!--BOTÓN ACTUALIZAR DATOS-->
        <Button
            android:id="@+id/btnActualizarDatos"
            android:text="@string/ActualizarDatos"
            android:layout_gravity="center"
            android:layout_width="300dp"
            android:layout_marginTop="15dp"
            android:layout_height="wrap_content"/>

        <!--BOTÓN ACTUALIZAR CONTRASEÑA-->
        <Button
            android:id="@+id/btnActualizarPassword"
            android:text="@string/ActualizarPassword"
            android:layout_gravity="center"
            android:layout_width="300dp"
            android:layout_height="wrap_content"/>

        <!--BOTÓN CERRAR SESIÓN-->
        <Button
            android:id="@+id/btnLogout"
            android:text="@string/CerrarSesion"
            android:layout_gravity="center"
            android:layout_width="300dp"
            android:layout_height="wrap_content"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</FrameLayout>