<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RedirectProfile">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/design_default_color_background"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_background">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/close"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:src="@drawable/ic_baseline_arrow_back_24"
                    android:contentDescription="@string/volverAtras" />
            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/bar">

        <!--NOMBRE-->
        <TextView
            android:id="@+id/nombreDato"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/NombreDato"
            android:textColor="#000"
            android:textSize="24sp" />

        <!--FOTO DE PERFIL-->
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imagenMisDatos"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:src="@drawable/servicios_centroseducativos" />

        <!--EXTRA DATA 1-->
        <TextView
            android:id="@+id/edadOSitioWebDato"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:textColor="#000"
            android:textSize="18sp" />

        <!--CORREO-->
        <TextView
            android:id="@+id/correoDato"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/CorreoDato"
            android:textColor="#000"
            android:textSize="18sp" />

        <!--TELEFONO-->
        <TextView
            android:id="@+id/telefonoDato"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/TelefonoDato"
            android:textColor="#000"
            android:textSize="18sp" />

        <!--DIRECCIÓN-->
        <TextView
            android:id="@+id/direccionDato"
            android:text="@string/DirecciónDato"
            android:textSize="18sp"
            android:textColor="#000"
            android:layout_marginTop="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!--BOTÓN IR AL SITIO WEB-->
        <Button
            android:id="@+id/btnSitioWeb"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/visitarSitioWEB" />

        <!--BOTÓN VER MAPA-->
        <Button
            android:id="@+id/btnVerMapa"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center"
            android:text="@string/verMapa" />

        <!--BOTÓN ENVIAR MENSAJE-->
        <Button
            android:id="@+id/btnEnviarMensaje"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/enviarMensaje" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>