<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.RegisterTeacherActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bar"
            android:background="@color/design_default_color_background">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/design_default_color_background"
                android:id="@+id/toolbar">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:src="@drawable/ic_baseline_arrow_back_24"
                        android:id="@+id/close"
                        android:contentDescription="@string/volverAtras" />
                </RelativeLayout>
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:src="@drawable/brainlogo" />

            <!--Titulo-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/titulo"
                android:textColor="#000"
                android:textSize="40sp"
                android:textStyle="bold" />

            <!--Docente o Centro Educativo-->

            <!--NOMBRE-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <EditText
                    android:id="@+id/nombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nombre"
                    android:importantForAutofill="no"
                    android:maxLength="50"
                    android:inputType="textCapWords|textAutoCorrect"
                    android:textColorHint="#000" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--APELLIDO-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/apellido"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/apellido"
                    android:maxLength="100"
                    android:importantForAutofill="no"
                    android:inputType="textCapWords|textAutoCorrect"
                    android:textColorHint="#000" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--EDAD-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edad"
                    android:maxLength="3"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:textColorHint="#000" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--TELEFONO-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/telefono"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/telefono"
                    android:importantForAutofill="no"
                    android:maxLength="9"
                    android:inputType="phone"
                    android:textColorHint="#000" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--CORREO-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/correo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/correo"
                    android:maxLength="100"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:textColorHint="#000" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--CONTRASEÑA-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:importantForAutofill="no"
                    android:maxLength="100"
                    android:inputType="textPassword"
                    android:textColorHint="#000" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--BOTON REGISTRAR USUARIO-->
            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/btn_registrar"
                android:textColor="#fff" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>